cluster/apps/home/home-assistant/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`hass.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: home-assistant
      namespace: home
    middlewares:
    - name: rfc1918
  tls:
    secretName: "${SECRET_DOMAIN/./-}"
